force-app/main/default/objects/Rental_Space__c/Rental_Space__c.object-meta.xml
<CustomObject>
    <label>Rental Space</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Rental Space Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rental Spaces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>