force-app/main/default/objects/Rental_Space__c/fields/Sqft__c.field-meta.xml
<CustomField>
    <fullName>Sqft__c</fullName>
    <label>Sqft</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>